Fixed spacing on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -36,14 +36,17 @@ html, body {
 }
 
 .name {
-  display: grid;
-  place-items: center; 
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 100vw;
-  margin-top: -75px; /* Adjust upward */
   font-family: Buenard, serif;
   font-weight: lighter;
+  margin-top: -50px;
 }
+
 .underline {
   display: inline-block;
   border-bottom: 1px solid #000; /* Underline the text */
@@ -51,11 +54,12 @@ html, body {
 }
 
 .welcome {
-  position: absolute;
-  top: 360px;
+  margin-top: 10px; /* Adjust the spacing below the name */
   font-family: MonteCarlo, serif;
+  font-size: 18px;
   font-weight: 500;
 }
+
 
 @keyframes fadeIn {
   from {
